@@ -2,7 +2,7 @@
 
 BATCH_NAME= bulk_dual
 CLIENTS_NUM_MAX=200
-CLIENTS_INITIAL_INC=10
+CLIENTS_RAMPUP_INC=10
 INTERFACE   =eth0    
 NETMASK=20  
 IP_ADDR_MIN= 192.168.1.1
