@@ -1,7 +1,7 @@
 ########### GENERAL SECTION ################################
 BATCH_NAME= custom_hdrs  
 CLIENTS_NUM=10
-#CLIENTS_INITIAL_INC=50
+#CLIENTS_RAMPUP_INC=50
 INTERFACE   =eth0    
 NETMASK=20  
 IP_ADDR_MIN= 192.168.1.1
